--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@sidebase/nuxt-auth": "^0.6.7",
     "axios": "^1.7.7",
     "nuxt": "^3.14.159",
     "vue": "latest",
